# unification_ros2_messages

./: CMakeLists.txt  README.md  common.yaml  moveit_sp_to_unidriver_mpr.yaml  moveit_unidriver_to_sp_mpr.yaml  package.xml  pose_updater_sp_to_uni_mpr.yaml  pose_updater_sp_to_uni_ricochet_mpr.yaml  pose_updater_uni_to_sp_mpr.yaml  robotiq_input_mapping_rules.yaml  robotiq_output_mapping_rules.yaml  saved_poses.yaml  scene_updater_sp_to_uni_mpr.yaml  scene_updater_sp_to_uni_ricochet_mpr.yaml  scene_updater_uni_to_sp_mpr.yaml  unidriver_sp_to_uni_mpr.yaml  unidriver_sp_to_uni_ricochet_mpr.yaml  unidriver_uni_to_sp_mpr.yaml  updater_sp_to_uni_mpr.yaml  updater_uni_to_sp_mpr.yaml  ur_pose_sp_to_uni_mpr.yaml  ur_pose_sp_to_uni_ricochet_mpr.yaml  ur_pose_uni_to_sp_mpr.yaml
launch/: unification_bridges.launch.py
msg/: AecuSPToUni.msg  AecuUniToSP.msg  CModelRobotInput.msg  CModelRobotOutput.msg  Control.msg  Gestures.msg  HecuUniToSP.msg  RecuUniToSP.msg  RobotiqInput.msg  RobotiqOutput.msg  SceneUpdaterSPToUni.msg  SceneUpdaterSPToUniRicochet.msg  SceneUpdaterUniToSP.msg  State.msg  Tooldrivertointerfacer.msg  Toolinterfacertodriver.msg
